Fri Jun  4 11:31:09 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/DnC_Dump.cpp:

          Made changes to fix "Ref" variables.

Fri Jun  4 11:22:46 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/ciao/Deployment_Core.idl:
	* DnC/ciao/Deployment.idl:
	  Changed the connection struct definition to better suite our
	  needs.

Fri Jun  4 11:19:45 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/Config_Handlers/DnC_Dump.cpp:

	Fixed the dump function for Deployment::SubcomponentPortEndpoint.
	Prints out the instanceRef.

Fri Jun  4 10:46:42 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/DnC_Dump.cpp:

          Made changes to fix dumping of some "Ref" variables.

Fri Jun  4 09:53:14 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/Config_Handlers/tckind_names.h:
	* DnC/Config_Handlers/tckind_names.cpp:
	* DnC/Config_Handlers/DnC_Dump.cpp:

	Deleted the files which initially written for dumping out the
	ComponentPropertyDescription::type.  It is handled as a big
	switch section in DnC_Dump.cpp.

Fri Jun  4 09:52:28 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:
        * DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp:

          Removed the check_plan_validity () method and added its
          functionality in the get_plan_info () method. This eliminates
          the need to have a separate lopp to iterate over the list of
          names to populate the NodeManager references, now this step is
          done within a single loop.

Thu Jun  3 17:28:49 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/tests/NodeApplicationTest/NodeApp_test_client.cpp:
	  Formatted the output a bit to make the message more reflective.

	* DnC/ciao/CCM_Core.mpc:
	  Moved the callback implementation from deployment servant to
	  stub.

Thu Jun  3 16:25:58 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>
